--- a/Week2/Day5/Exercises/XpGold/index.html
+++ b/Week2/Day5/Exercises/XpGold/index.html
@@ -31,6 +31,7 @@
     <button type="button" name="button" onclick="operator('*');">*</button>
     <button type="button" name="button" onclick="operator('/');">/</button>
     <button type="button" name="button" onclick="equal();">=</button>
+    <div id> </div>
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
