--- a/Week3/Day3/exsercises/DailyChallenge/classSolution/index.html
+++ b/Week3/Day3/exsercises/DailyChallenge/classSolution/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head> 
+    <title>daily challenge</title>
+</head>
 <body>
-    <input type="text" name="fname" value="" onkeypress="return lettersOnly(event)"/>
+    <label for="input">Input Letters Only</label>
+    <input name="input" type="text">
+
     <script src="script.js"></script>
 </body>
 </html>
