--- a/Week5/day5/Exercises/miniProject/StarWarsWebAppUsingAJAXAPI/index.html
+++ b/Week5/day5/Exercises/miniProject/StarWarsWebAppUsingAJAXAPI/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div class="infoWeb2"> 
-        <p> </p>
+    <div> <H1> STAR WARS</H1> </div>
+
+    <div id="container">
+
+    <div>
+        <h3 id="name"> </h3>
+        <p id="heigth" > </p>
+        <p id="gender"> </p>
+        <p id="by"> </p>
+        <p id="home"> </p>
     </div>
+
+<button id="btn"> FIND SOMEONE</button>
     <script src="script.js"></script>
+
+</div>
 </body>
 </html>
