--- a/Week5/SelfPractice/index.html
+++ b/Week5/SelfPractice/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div class="infoWeb2"> 
-        <p> </p>
-    </div>
+    <h1>JSON and AJAX</h1>
+    <button id="btn">Fetch info for 3 animals</button>
+    <div id="animalinfo"></div>
     <script src="script.js"></script>
 </body>
 </html>
